--- a/VietMapGeocoder.xcodeproj/xcshareddata/xcschemes/Example (Objective-C).xcscheme
+++ b/VietMapGeocoder.xcodeproj/xcshareddata/xcschemes/Example (Objective-C).xcscheme
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "DD342B4F19A140EE00219F77"
-               BuildableName = "Geocoder (Swift).app"
-               BlueprintName = "Example (Swift)"
-               ReferencedContainer = "container:MapboxGeocoder.xcodeproj">
+               BlueprintIdentifier = "DDC2472919A1C60E0054B0C0"
+               BuildableName = "Geocoder (Objective-C).app"
+               BlueprintName = "Example (Objective-C)"
+               ReferencedContainer = "container:VietMapGeocoder.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -27,6 +27,15 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "DDC2472919A1C60E0054B0C0"
+            BuildableName = "Geocoder (Objective-C).app"
+            BlueprintName = "Example (Objective-C)"
+            ReferencedContainer = "container:VietMapGeocoder.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <Testables>
          <TestableReference
             skipped = "NO">
@@ -35,7 +44,7 @@
                BlueprintIdentifier = "DDF1E8491BD6F7BA00C40C78"
                BuildableName = "MapboxGeocoderTests.xctest"
                BlueprintName = "MapboxGeocoderTests"
-               ReferencedContainer = "container:MapboxGeocoder.xcodeproj">
+               ReferencedContainer = "container:VietMapGeocoder.xcodeproj">
             </BuildableReference>
          </TestableReference>
          <TestableReference
@@ -45,7 +54,7 @@
                BlueprintIdentifier = "DA51709E1CF1B18F00CD6DCF"
                BuildableName = "MapboxGeocoderTests.xctest"
                BlueprintName = "MapboxGeocoderMacTests"
-               ReferencedContainer = "container:MapboxGeocoder.xcodeproj">
+               ReferencedContainer = "container:VietMapGeocoder.xcodeproj">
             </BuildableReference>
          </TestableReference>
          <TestableReference
@@ -55,21 +64,10 @@
                BlueprintIdentifier = "DA5170C91CF253EE00CD6DCF"
                BuildableName = "MapboxGeocoderTests.xctest"
                BlueprintName = "MapboxGeocoderTVTests"
-               ReferencedContainer = "container:MapboxGeocoder.xcodeproj">
+               ReferencedContainer = "container:VietMapGeocoder.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "DD342B4F19A140EE00219F77"
-            BuildableName = "Geocoder (Swift).app"
-            BlueprintName = "Example (Swift)"
-            ReferencedContainer = "container:MapboxGeocoder.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
-      <AdditionalOptions>
-      </AdditionalOptions>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
@@ -85,14 +83,12 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "DD342B4F19A140EE00219F77"
-            BuildableName = "Geocoder (Swift).app"
-            BlueprintName = "Example (Swift)"
-            ReferencedContainer = "container:MapboxGeocoder.xcodeproj">
+            BlueprintIdentifier = "DDC2472919A1C60E0054B0C0"
+            BuildableName = "Geocoder (Objective-C).app"
+            BlueprintName = "Example (Objective-C)"
+            ReferencedContainer = "container:VietMapGeocoder.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
-      <AdditionalOptions>
-      </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -104,10 +100,10 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "DD342B4F19A140EE00219F77"
-            BuildableName = "Geocoder (Swift).app"
-            BlueprintName = "Example (Swift)"
-            ReferencedContainer = "container:MapboxGeocoder.xcodeproj">
+            BlueprintIdentifier = "DDC2472919A1C60E0054B0C0"
+            BuildableName = "Geocoder (Objective-C).app"
+            BlueprintName = "Example (Objective-C)"
+            ReferencedContainer = "container:VietMapGeocoder.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
